# AlterNative-CXX-Lib

./: .gitmodules  .travis.yml  README.md  alternative-lib-compile.bat  alternative-lib-compile.sh
System/: CMakeLists.txt  Exception.h  String.cpp  String.h
doc/: Doxyfile
src/: CMakeLists.txt
src/Microsoft.SPOT/: CMakeLists.txt
src/System/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Array.h  CMakeLists.txt  Console.cpp  Console.h  DateTime.cpp  DateTime.h  DateTimeKind.h  Delegate.h  Exception.cpp  Exception.h  GC.cpp  GC.h  Object.h  Random.h  String.cpp  String.h  System.h  System.vcxproj  System.vcxproj.filters  TimeSpan.cpp  TimeSpan.h  cmake_install.cmake  events.cpp  events.h  predefs.h  support.h  sys.sln
src/System/Collections/: IEnumerable.h
src/System/Collections/Generic/: Dictionary.h  List.h
src/System/Exception/SystemException/: NotImplementedException.h
src/System/Exception/SystemException/ArgumentException/: ArgumentOutOfRangeException.cpp  ArgumentOutOfRangeException.h
src/System/Exception/SystemException/InvalidOperationException/: ObjectDisposedException.h
src/System/IO/: File.cpp  File.h  FileAccess.h  FileMode.h  FileStream.h  StreamReaderCXX.h  StreamWriterCXX.cpp  StreamWriterCXX.h  TextReader.h  TextWriter.cpp
src/System/Text/: Encoding.cpp  Encoding.h  StringBuilder.cpp
src/System/Threading/: StackCrawlMark.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h
src/System/exceptions/: SystemException.h
src/System/exceptions/systemException/: ArgumentException.h  InvalidOperationException.h  NotImplementedException.h
src/System/support/: boxing.h  delegates.h  events.h  general.h  lock.h  stringtraits.h  typeTraits.h
src/System/support/internal/: TypeTraits.h
src/System/templates/internal/: TypeTraits.h
src/gc/: ALL_BUILD.vcxproj  CMakeLists.txt  cmake_install.cmake  gc-lib.vcxproj
src/public/: CMakeLists.txt
src/public/Microsoft/Win32/SafeHandles/: SafeFileHandle.h  SafeHandleZeroOrMinusOneIsInvalid.h
src/public/System/: Array.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Console.cpp  Console.h  Convert.cpp  Convert.h  DateTime.cpp  DateTime.h  DateTimeKind.h  GC.cpp  IDisposable.h  Math.cpp  Math.h  Object.cpp  Object.h  Random.cpp  String.cpp  String.h  StringComparison.h  System.h  events.h  predefs.h  support.h
src/public/System/Collections/: IteratorCXX.h
src/public/System/Collections/Generic/: Dictionary.h  IEnumeratorCXX.h  IteratorCXX.h
src/public/System/Exception/: ApplicationException.cpp  ApplicationException.h  ObjectDisposedException.cpp  ObjectDisposedException.h
src/public/System/Exception/SystemException/: ArithmeticException.cpp  ArithmeticException.h  IndexOutOfRangeException.cpp  IndexOutOfRangeException.h  InvalidOperationException.cpp  NotSupportedException.cpp  NotSupportedException.h
src/public/System/Exception/SystemException/ArithmeticException/: OverflowException.cpp  OverflowException.h
src/public/System/Exception/SystemException/IO/: IOException.cpp  IOException.h
src/public/System/Exception/SystemException/IO/IOException/: EndOfStreamException.cpp  EndOfStreamException.h
src/public/System/Exception/SystemException/InvalidOperationException/: ObjectDisposedException.cpp
src/public/System/Exception/SystemException/Security/: SecurityException.cpp  SecurityException.h
src/public/System/IO/: ANIO.h  ANIOError.h  BinaryReader.cpp  BinaryReader.h  File.cpp  File.h  FileOptions.h  FileShare.h  FileStream.cpp  MemoryStream.cpp  MemoryStream.h  SeekOrigin.h  Stream.h  StreamReaderCXX.cpp  StreamWriterCXX.cpp  StreamWriterCXX.h  TextReader.h  TextWriter.cpp  TextWriter.h
src/public/System/Net/: EndPoint.cpp  EndPoint.h  IPAddress.cpp  IPAddress.h  IPEndPoint.cpp  IPEndPoint.h
src/public/System/Net/Sockets/: AddressFamily.h  PracticalSocket.cpp  PracticalSocket.h  ProtocolType.h  Socket.cpp  Socket.h  SocketFlags.h  SocketType.h
src/public/System/Runtime/InteropServices/: SafeHandle.cpp  SafeHandle.h
src/public/System/Security/AccessControl/: AccessControlActions.h  AccessControlSections.h  FileSecurity.h  FileSystemRights.h
src/public/System/Security/Permissions/: FileIOPermissionAccess.h  SecurityPermissionFlags.h
src/public/System/Text/: Encoding.cpp  Encoding.h  StringBuilder.cpp  StringBuilder.h
src/public/System/Threading/: Interlocked.h  NativeOverlapped.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h
src/public/System/support/: array.h  asis.h  boxing.h  constraints.h  delegates.h  events.h  general.h  io.cpp  io.h  lock.h  loops.h  memory.h  stringtraits.h  switch.h  typeTraits.h  valuetypes.h
src/public/System/support/internal/: TypeTraits.h
src/public/gc/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  gc-lib.vcxproj.filters  gc.sln
